# Math

./: .gitignore  CMakeLists.txt
Executable/: main.cpp
Export/Math/Include/Math/Matrix/Mat4/: Mat4.h
Export/Math/Include/Math/Vector/Vec2/: Vec2.h
Export/Math/Include/Math/Vector/Vec4/: Vec4.h
Math/Core/: Core.h
Math/Matrix/Mat4/: Mat4.cpp
Math/Random/: Random.cpp  Random.h
Math/Trigonometry/: Trigonometry.cpp  Trigonometry.h
Math/Vector/Vec2/: Vec2.cpp
Math/Vector/Vec3/: Vec3.cpp  Vec3.h
Math/Vector/Vec4/: Vec4.cpp
